# telegram-stock-info-noti-bot

./: .claudeignore  .codexignore  .dockerignore  .env.swp  .geminiignore  .gitignore  .gitmodules  CLAUDE.md  Dockerfile  INFO.md  Makefile  Procfile  README.md  Reference.md  async_main.py  check_tables.py  daily-52w-hl-stock.py  daily-market-value.py  daily-send.py  debug_ibk.py  docker-compose.yml  edit_json.py  environment.yml  fnguide.py  gd.py  google_cal.py  googledrive.py  hankyungconsen.py  hk.py  hmsec.json  install_docker_v2.sh  json_to_sqlite.py  main.py  market-value.py  memo-oracle.md  migrate_sqlite_to_oracle.py  naver-research.py  new_main.py  news.py  notuse.py  (+26 more)
admin/: ls.py  naver_scrap.py
archive/: patch_oracle_only.py  test_ls_debug.py
backup/: fnguide.py  googledrive.py  ls.py
db/: create_tables.sql  database_manager.py
docs/: architecture.md  changelog.md  pgsql-migration-to-ssh-library.md  postgresql-v2.md  url-semantics.md
local_worker/: config.py  worker.py
models/: ConfigManager.py  DataManager.py  FirmInfo.py  GeminiManager.py  GoogleDrive.py  OracleManager.py  OracleManagerSQL.py  PostgreSQLManager.py  PostgreSQLManagerV2.py  SQLiteManager.py  SecretKey.py  WebScraper.py  __init__.py  db_factory.py  report_sending_history.py
modules/: BNKfn_23.py  DAOL_14.py  DBfi_19.py  DS_11.py  Daeshin_17.py  HANA_3.py  Hanwhawm_21.py  Heungkuk_28.py  Hmsec_9.py  Hygood_22.py  IBKs_25.py  KBsec_4.py  Kiwoom_10.py  Koreainvestment_13.py  Kyobo_24.py  LS_0.py  LS_1.py  Leading_16.py  MERITZ_20.py  Miraeasset_8.py  NHQV_2.py  SKS_26.py  __init__.py  (+17 more)
(+122 files in other folders)
